--- a/app/design/adminhtml/ABC/backend/Magento_Theme/layout/default.xml
+++ b/app/design/adminhtml/ABC/backend/Magento_Theme/layout/default.xml
@@ -4,4 +4,13 @@
         <!-- Add adminhtml theme overrides -->
         <css src="css/custom.css"/>
     </head>
+    <body>
+        <referenceBlock name="logo">
+            <arguments>
+                <argument name="logo_file" xsi:type="string">images/admin_logo.png</argument>
+                <argument name="logo_img_width" xsi:type="number">300</argument>
+                <argument name="logo_img_height" xsi:type="number">300</argument>
+            </arguments>
+        </referenceBlock>
+    </body>
 </page>
